--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.s20cxq.testapp"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -36,5 +36,9 @@ dependencies {
     implementation project(path: ':lib-cropview')
 
     implementation 'com.permissionx.guolindev:permissionx:1.4.0' //请求权限
+
+//    def camerax_version = "1.0.0-rc01"
+//    implementation "androidx.camera:camera-core:${camerax_version}"
+//    implementation "androidx.camera:camera-camera2:${camerax_version}"
 
 }
