--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.permission.camera"/>
+
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -30,11 +34,15 @@
         </activity>
         <activity
             android:name="com.jeanboy.cropview.cropper.CropActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
 
-        <activity android:name="camerademo.ShowCropperedActivity"/>
-        <activity android:name="camerademo.TakePhoteActivity"/>
-
+        <activity android:name="camerademo.ShowCropperedActivity" />
+        <activity
+            android:name="camerademo.TakePhoteActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <!--        android:configChanges="orientation|keyboardHidden|screenSize"-->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
@@ -46,6 +54,8 @@
                 android:resource="@xml/rc_file_path"
                 tools:replace="name,resource" />
         </provider>
+
+
     </application>
 
 </manifest>
